// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should render the flexbox container with border style 1`] = `
<div>
  <div
    class="css-zl7chm-containerAndLabel"
    data-testid="flexbox-label"
  >
    <div
      class="css-1ccipwk-propertySectionLabel"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 css-1rf0rca-MuiTypography-root-typography"
      >
        label
      </h6>
    </div>
    <div
      class="css-4r0vbw-container"
    />
  </div>
</div>
`;

exports[`should render the flexbox container without style 1`] = `
<div>
  <div
    class="css-ftdefu-containerAndLabel"
    data-testid="flexbox-label"
  >
    <div
      class="css-1ccipwk-propertySectionLabel"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 css-1rf0rca-MuiTypography-root-typography"
      >
        label
      </h6>
    </div>
    <div
      class="css-4r0vbw-container"
    />
  </div>
</div>
`;
